--- a/index.html
+++ b/index.html
@@ -4,22 +4,30 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title lang="en">Web Studio</title>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
     <!-- Шапка сайта -->
     <header>
       <nav>
-        <a href="./index.html" lang="en"> <span>Web</span>Studio </a>
-        <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+        <a href="./index.html" lang="en" class="header-logo">
+          <span class="accent">Web</span> Studio
+        </a>
+
+        <ul class="site-nav list">
+          <li><a href="./index.html" class="link current">Студия</a></li>
+          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+          <li><a href="" class="link">Контакты</a></li>
         </ul>
       </nav>
 
       <address>
-        <ul>
+        <ul class="contacts list">
           <li>
             <a href="mailto:info@devstudio.com" lang="en">info@devstudio.com</a>
           </li>
@@ -31,42 +39,42 @@
     <main>
       <!-- Герой -->
       <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <a href="">Заказать услугу</a>
+        <h1 class="slogan">Эффективные решения для вашего бизнеса</h1>
+        <a href="" class="ordering-btn">Заказать услугу</a>
       </section>
 
       <!-- Наши преимущества -->
-      <section>
+      <section class="advantages">
         <h2>Наши преимущества</h2>
-        <ul>
+        <ul class="list">
           <li>
             <img src="./images/antenna.svg" alt="Антенна" />
-            <h3>Внимание к деталям</h3>
-            <p>
+            <h3 class="advantages-title">Внимание к деталям</h3>
+            <p class="advantages-text">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
             <img src="./images/clock.svg" alt="Часы" />
-            <h3>Пунктуальность</h3>
-            <p>
+            <h3 class="advantages-title">Пунктуальность</h3>
+            <p class="advantages-text">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
             <img src="./images/diagram.svg" alt="Монитор с диаграммой" />
-            <h3>Планирование</h3>
-            <p>
+            <h3 class="advantages-title">Планирование</h3>
+            <p class="advantages-text">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
             <img src="./images/astronaut.svg" alt="Астронавт" />
-            <h3>Современные технологии</h3>
-            <p>
+            <h3 class="advantages-title">Современные технологии</h3>
+            <p class="advantages-text">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
@@ -75,16 +83,16 @@
       </section>
 
       <!-- Чем мы занимаемся -->
-      <section>
-        <h2>Чем мы занимаемся</h2>
-        <ul>
+      <section class="products">
+        <h2 class="section-title">Чем мы занимаемся</h2>
+        <ul class="list">
           <li>
             <img src="./images/laptop.jpg" alt="Ноутбук" width="370" />
-            <p>Десктопные приложения</p>
+            <p class="products-name">Десктопные приложения</p>
           </li>
           <li>
             <img src="./images/smartphone.jpg" alt="Смартфон" width="370" />
-            <p>Мобильные приложения</p>
+            <p class="products-name">Мобильные приложения</p>
           </li>
           <li>
             <img
@@ -92,15 +100,15 @@
               alt="Монитор с открытым сайтом"
               width="370"
             />
-            <p>Дизайнерские решения</p>
+            <p class="products-name">Дизайнерские решения</p>
           </li>
         </ul>
       </section>
 
       <!-- Наша команда -->
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
+      <section class="team">
+        <h2 class="section-title">Наша команда</h2>
+        <ul class="list">
           <li>
             <img
               src="./images/john-smith.jpg"
@@ -108,20 +116,40 @@
               width="270"
               lang="en"
             />
-            <h3 lang="en">John Smith</h3>
-            <p lang="en">Product Designer</p>
-            <ul>
+            <h3 lang="en" class="team-member">John Smith</h3>
+            <p lang="en" class="team-profession">Product Designer</p>
+            <ul class="list">
               <li>
-                <a href="" aria-label="Ссылка на Instagram">Instagram</a>
+                <a
+                  href=""
+                  class="team-social-networks"
+                  aria-label="Ссылка на Instagram"
+                  >Instagram</a
+                >
               </li>
               <li>
-                <a href="" aria-label="Ссылка на Twitter">Twitter</a>
+                <a
+                  href=""
+                  class="team-social-networks"
+                  aria-label="Ссылка на Twitter"
+                  >Twitter</a
+                >
               </li>
               <li>
-                <a href="" aria-label="Ссылка на Facebook">Facebook</a>
+                <a
+                  href=""
+                  class="team-social-networks"
+                  aria-label="Ссылка на Facebook"
+                  >Facebook</a
+                >
               </li>
               <li>
-                <a href="" aria-label="Ссылка на Linkedin">Linkedin</a>
+                <a
+                  href=""
+                  class="team-social-networks"
+                  aria-label="Ссылка на Linkedin"
+                  >Linkedin</a
+                >
               </li>
             </ul>
           </li>
@@ -133,20 +161,40 @@
               width="270"
               lang="en"
             />
-            <h3 lang="en">Marta Stewart</h3>
-            <p lang="en">Frontend Developer</p>
-            <ul>
+            <h3 lang="en" class="team-member">Marta Stewart</h3>
+            <p lang="en" class="team-profession">Frontend Developer</p>
+            <ul class="list">
               <li>
-                <a href="" aria-label="Ссылка на Instagram">Instagram</a>
+                <a
+                  href=""
+                  class="team-social-networks"
+                  aria-label="Ссылка на Instagram"
+                  >Instagram</a
+                >
               </li>
               <li>
-                <a href="" aria-label="Ссылка на Twitter">Twitter</a>
+                <a
+                  href=""
+                  class="team-social-networks"
+                  aria-label="Ссылка на Twitter"
+                  >Twitter</a
+                >
               </li>
               <li>
-                <a href="" aria-label="Ссылка на Facebook">Facebook</a>
+                <a
+                  href=""
+                  class="team-social-networks"
+                  aria-label="Ссылка на Facebook"
+                  >Facebook</a
+                >
               </li>
               <li>
-                <a href="" aria-label="Ссылка на Linkedin">Linkedin</a>
+                <a
+                  href=""
+                  class="team-social-networks"
+                  aria-label="Ссылка на Linkedin"
+                  >Linkedin</a
+                >
               </li>
             </ul>
           </li>
@@ -158,20 +206,40 @@
               width="270"
               lang="en"
             />
-            <h3 lang="en">Robert Jakis</h3>
-            <p lang="en">Marketing</p>
-            <ul>
+            <h3 lang="en" class="team-member">Robert Jakis</h3>
+            <p lang="en" class="team-profession">Marketing</p>
+            <ul class="list">
               <li>
-                <a href="" aria-label="Ссылка на Instagram">Instagram</a>
+                <a
+                  href=""
+                  class="team-social-networks"
+                  aria-label="Ссылка на Instagram"
+                  >Instagram</a
+                >
               </li>
               <li>
-                <a href="" aria-label="Ссылка на Twitter">Twitter</a>
+                <a
+                  href=""
+                  class="team-social-networks"
+                  aria-label="Ссылка на Twitter"
+                  >Twitter</a
+                >
               </li>
               <li>
-                <a href="" aria-label="Ссылка на Facebook">Facebook</a>
+                <a
+                  href=""
+                  class="team-social-networks"
+                  aria-label="Ссылка на Facebook"
+                  >Facebook</a
+                >
               </li>
               <li>
-                <a href="" aria-label="Ссылка на Linkedin">Linkedin</a>
+                <a
+                  href=""
+                  class="team-social-networks"
+                  aria-label="Ссылка на Linkedin"
+                  >Linkedin</a
+                >
               </li>
             </ul>
           </li>
@@ -183,20 +251,40 @@
               width="270"
               lang="en"
             />
-            <h3 lang="en">Martin Doe</h3>
-            <p lang="en">UI Designer</p>
-            <ul>
+            <h3 lang="en" class="team-member">Martin Doe</h3>
+            <p lang="en" class="team-profession">UI Designer</p>
+            <ul class="list">
               <li>
-                <a href="" aria-label="Ссылка на Instagram">Instagram</a>
+                <a
+                  href=""
+                  class="team-social-networks"
+                  aria-label="Ссылка на Instagram"
+                  >Instagram</a
+                >
               </li>
               <li>
-                <a href="" aria-label="Ссылка на Twitter">Twitter</a>
+                <a
+                  href=""
+                  class="team-social-networks"
+                  aria-label="Ссылка на Twitter"
+                  >Twitter</a
+                >
               </li>
               <li>
-                <a href="" aria-label="Ссылка на Facebook">Facebook</a>
+                <a
+                  href=""
+                  class="team-social-networks"
+                  aria-label="Ссылка на Facebook"
+                  >Facebook</a
+                >
               </li>
               <li>
-                <a href="" aria-label="Ссылка на Linkedin">Linkedin</a>
+                <a
+                  href=""
+                  class="team-social-networks"
+                  aria-label="Ссылка на Linkedin"
+                  >Linkedin</a
+                >
               </li>
             </ul>
           </li>
@@ -204,36 +292,36 @@
       </section>
 
       <!-- Постоянные клиенты -->
-      <section>
-        <h2>Постоянные клиенты</h2>
-        <ul>
+      <section class="clients">
+        <h2 class="section-title">Постоянные клиенты</h2>
+        <ul class="list">
           <li>
-            <a href="" lang="en">
+            <a href="" class="clients-link" lang="en">
               <img src="./images/logo1.svg" alt="Ya and Co" />
             </a>
           </li>
           <li>
-            <a href="" lang="en">
+            <a href="" class="clients-link" lang="en">
               <img src="./images/logo2.svg" alt="Company Tagline here" />
             </a>
           </li>
           <li>
-            <a href="" lang="en">
+            <a href="" class="clients-link" lang="en">
               <img src="./images/logo3.svg" alt="Company" />
             </a>
           </li>
           <li>
-            <a href="" lang="en">
+            <a href="" class="clients-link" lang="en">
               <img src="./images/logo4.svg" alt="Foster Peters" />
             </a>
           </li>
           <li>
-            <a href="" lang="en">
+            <a href="" class="clients-link" lang="en">
               <img src="./images/logo5.svg" alt="Brand" />
             </a>
           </li>
           <li>
-            <a href="" lang="en">
+            <a href="" class="clients-link" lang="en">
               <img src="./images/logo6.svg" alt="Company Tag line" />
             </a>
           </li>
@@ -242,39 +330,68 @@
     </main>
 
     <!-- Подвал -->
-    <footer>
+    <footer class="footer">
       <div>
-        <p lang="en"><span>Web</span> Studio</p>
-        <address>
-          г. Киев, пр-т Леси Украинки, 26 <br />
-          <a href="mailto:info@example.com" lang="en">info@example.com</a><br />
-          <a href="tel:+380991111111">+38 099 111 11 11</a>
+        <p lang="en" class="footer-logo">
+          <span class="accent">Web</span> Studio
+        </p>
+
+        <address class="address">
+          <p class="address-direction">г. Киев, пр-т Леси Украинки, 26</p>
+          <a href="mailto:info@example.com" lang="en" class="address-contact-us"
+            >info@example.com</a
+          >
+          <br />
+          <a href="tel:+380991111111" class="address-contact-us"
+            >+38 099 111 11 11</a
+          >
         </address>
       </div>
 
-      <div>
-        <p><b>присоединяйтесь</b></p>
-        <ul>
+      <div class="join">
+        <b class="appeal">присоединяйтесь</b>
+        <ul class="list">
           <li>
-            <a href="" aria-label="Ссылка на Instagram">Instagram</a>
+            <a
+              href=""
+              class="join-social-networks"
+              aria-label="Ссылка на Instagram"
+              >Instagram</a
+            >
           </li>
           <li>
-            <a href="" aria-label="Ссылка на Twitter">Twitter</a>
+            <a
+              href=""
+              class="join-social-networks"
+              aria-label="Ссылка на Twitter"
+              >Twitter</a
+            >
           </li>
           <li>
-            <a href="" aria-label="Ссылка на Facebook">Facebook</a>
+            <a
+              href=""
+              class="join-social-networks"
+              aria-label="Ссылка на Facebook"
+              >Facebook</a
+            >
           </li>
           <li>
-            <a href="" aria-label="Ссылка на Linkedin">Linkedin</a>
+            <a
+              href=""
+              class="join-social-networks"
+              aria-label="Ссылка на Linkedin"
+              >Linkedin</a
+            >
           </li>
         </ul>
       </div>
 
-      <div>
-        <p><b>подпишитесь на рассылку</b></p>
+      <div class="subscribe">
+        <b class="appeal">подпишитесь на рассылку</b>
+        <button class="subscribe-btn">Подписаться</button>
       </div>
 
-      <p lang="en">2020 &#8739; Developed by GoIT Students</p>
+      <p lang="en" class="developed">2020 &#8739; Developed by GoIT Students</p>
     </footer>
   </body>
 </html>
